  . If the result is 0, n_scale is set to 0. (SakiTakamachi)
  . If size of BC_VECTOR array is within 64 bytes, stack area is now used.
    (SakiTakamachi)

- CLI:
  . Add --ini=diff to print INI settings changed from the builtin default.
    (timwolla)
  . Drop support for -z CLI/CGI flag. (nielsdos)
  . Fixed GH-17956 - development server 404 page does not adapt to mobiles.
    (pascalchevrel)

- COM:
  . Fixed property access of PHP objects wrapped in variant. (cmb)
  . Fixed method calls for PHP objects wrapped in variant. (cmb)

- Core:
  . Fixed bug GH-16665 (\array and \callable should not be usable in
    class_alias). (nielsdos)
  . Added PHP_BUILD_DATE constant. (cmb)
  . Added support for Closures and first class callables in constant
    expressions. (timwolla, Volker Dusch)
  . Use `clock_gettime_nsec_np()` for high resolution timer on macOS
    if available. (timwolla)
  . Implement GH-15680 (Enhance zend_dump_op_array to properly represent
    non-printable characters in string literals). (nielsdos, WangYihang)
  . Add support for backtraces for fatal errors. (enorris)
  . Fixed bug GH-17442 (Engine UAF with reference assign and dtor). (nielsdos)
  . Improved error message of UnhandledMatchError for
    zend.exception_string_param_max_len=0. (timwolla)
  . Fixed bug GH-17959 (Relax missing trait fatal error to error exception).
    (ilutov)
  . Fixed bug GH-18033 (NULL-ptr dereference when using register_tick_function
    in destructor). (nielsdos)
  . Fixed bug GH-18026 (Improve "expecting token" error for ampersand). (ilutov)
  . Added the #[\NoDiscard] attribute to indicate that a function's return
    value is important and should be consumed. (timwolla, Volker Dusch)
  . Added the (void) cast to indicate that not using a value is intentional.
    (timwolla, Volker Dusch)
  . Added get_error_handler(), get_exception_handler() functions. (Arnaud)
  . Fixed bug GH-15753 and GH-16198 (Bind traits before parent class). (ilutov)